--- a/package.json
+++ b/package.json
@@ -2,12 +2,38 @@
   "name": "vue-ssr-example-q",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node server"
+    "dev": "node server",
+    "start": "cross-env NODE_ENV=production node server",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
-    "koa": "^2.7.0",
-    "koa-router": "^7.4.0",
-    "vue": "^2.6.8",
-    "vue-server-renderer": "^2.6.8"
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "vue": "^2.6.9",
+    "vue-router": "^3.0.2",
+    "vue-server-renderer": "^2.6.9",
+    "vue-template-compiler": "^2.6.9",
+    "vuex": "^3.1.0",
+    "vuex-router-sync": "^5.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
+    "chokidar": "^2.1.2",
+    "cross-env": "^5.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "memory-fs": "^0.4.1",
+    "rimraf": "^2.6.3",
+    "vue-loader": "^15.7.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-middleware": "^3.6.1",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
