--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.7.0",
     "chokidar": "^2.1.2",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "memory-fs": "^0.4.1",
     "rimraf": "^2.6.3",
